Fix match modal close button visibility

--- a/styles/schedule.css
+++ b/styles/schedule.css
@@ -1018,8 +1018,8 @@ tr:has(.highlight-team) {
 
 .modal-close {
     position: absolute;
-    right: -15px;
-    top: -15px;
+    top: 10px;
+    right: 10px;
     width: 30px;
     height: 30px;
     border-radius: 50%;
